# fauxreal

./: .gitignore  README.md  debug_output.json  fauxreal-schema.json  fauxreal_config.json  output_orders.csv  output_transactions.csv  output_users.json  pyproject.toml  var_gen_test.py
.github/workflows/: publish.yml
docs/: index.html
docs/assets/: index-B4YkiFQN.js  index-BGNpoMJi.js  index-BS3nnYpM.css  index-BwT0tiap.js  index-By_ZkSKC.css  index-CRhySsWc.js  index-Cti5V2zn.js  index-D8c4yQyA.js  index-DQUaNiOT.css  index-DZmcYlU4.js  index-_yEJMen3.css
docs/cookbook/: 01_basic_faker.json  02_dataframes.json
src/fauxreal/: __init__.py  cli.py  engine.py  schema.py
testing/v0.1.7_testing/: example_config.json  example_config.json5  example_config.yaml  fauxreal_config.json  generate_schema.py  output_orders.csv  output_transactions.csv  output_users.json  test_browser.cjs  test_browser2.cjs  test_browser3.cjs
ui-builder/: index.html  package-lock.json  package.json  test_empty_box.cjs  vite.config.js
ui-builder/src/: App.jsx  index.css  schema.json  templates.jsx
