[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fauxreal"
version = "0.1.6"
description = "A powerful, declarative engine for generating dynamic, relational, and highly customizable fake datasets using a JSON schema."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Vatsa", email = "228140210+svr-s@users.noreply.github.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0.0",
    "faker>=10.0.0",
    "python-dateutil",
    "pyyaml>=6.0",
    "json5>=0.9.0"
]

[project.optional-dependencies]
parquet = ["pyarrow", "fastparquet"]

[project.urls]
Homepage = "https://github.com/svr-s/fauxreal"

[project.scripts]
fauxreal = "fauxreal.cli:main"
